fix: add webkit transform solution for Safari card overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,8 @@ body {
     left: 0;
     width:100%;
     height: 100%;
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
     z-index: 2;
     visibility: hidden;
 }
@@ -81,6 +83,8 @@ body {
     animation-name: outcome-zoom;
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
     z-index: 100;
 }
 @keyframes outcome-zoom {
@@ -442,6 +446,8 @@ visibility: hidden;
     animation-name: feedback-zoom;
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
     z-index: 99;
 }
 @keyframes feedback-zoom {
